--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -15,7 +15,7 @@ on:
     branches:
       - master
     paths:
-      - '.config'
+      - 'orange_pi_zero_plus.config'
 #  schedule:
 #    - cron: 0 8 * * 5
 #  watch:
