--- a/.github/workflows/build_raspberry_pi_3b.yml
+++ b/.github/workflows/build_raspberry_pi_3b.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build OpenWrt
+name: Build Openwrt for Raspberry Pi 3B
 
 on:
   release:
