--- a/.github/workflows/buil_orange_pi_zero_plus.yml
+++ b/.github/workflows/buil_orange_pi_zero_plus.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build OpenWrt
+name: Build Openwrt for Orange Pi Zero Plus
 
 on:
   release:
