--- a/.github/workflows/build_raspberry_pi_3b.yml
+++ b/.github/workflows/build_raspberry_pi_3b.yml
@@ -113,5 +113,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware
+        name: openwrt_raspberry_pi_3b
         path: ${{ env.FIRMWARE }}
