--- a/nanopi_r2s.config
+++ b/nanopi_r2s.config
@@ -4534,8 +4534,8 @@ CONFIG_PACKAGE_tc=y
 # CONFIG_PACKAGE_openssh-server is not set
 # CONFIG_PACKAGE_openssh-server-pam is not set
 # CONFIG_PACKAGE_openssh-sftp-avahi-service is not set
-# CONFIG_PACKAGE_openssh-sftp-client=y
-# CONFIG_PACKAGE_openssh-sftp-server=y
+CONFIG_PACKAGE_openssh-sftp-client=y
+CONFIG_PACKAGE_openssh-sftp-server=y
 # CONFIG_PACKAGE_sshtunnel is not set
 
 #
